Fix detailHeader overflow behavior

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,9 @@ body {
 
 .detailHeader {
   font-weight: bold;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .animation_fadein {
